--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -38,6 +38,8 @@ h2{
   }
 }
 .usercard{
+	width: 100%;
+	font-size: 1.2em;
 	padding: 30px;
 	-webkit-animation: fade 6s;
   -webkit-animation-fill-mode: both;
@@ -48,7 +50,6 @@ h2{
 	background-color: rgba(240, 248, 255, .9);
 	margin: 0 auto;
 	color: black !important;
-	width: 600px;
 	opacity: .8 !important;
 }
 
@@ -214,10 +215,11 @@ h2{
 }
 
 .profile_info{
+	width: 100%;
+	text-align: center;
 	font-family: raleway, sans-serif;
 	padding-top: 30px;
 	margin: 0 auto;
-	width: 300px;
 }
 
 @-webkit-keyframes pulse_animation {
